Fix logo on mobile

--- a/src/CAIDA/BGPStreamWeb/HomepageBundle/Resources/public/css/base.css
+++ b/src/CAIDA/BGPStreamWeb/HomepageBundle/Resources/public/css/base.css
@@ -129,8 +129,14 @@ pre {
 }
 
 /* homepage styles */
-/*
 .jumbotron > h1 > img {
     max-width: 500px;
+    width: 80%;
 }
-*/
+
+@media (min-width: 768px) {
+    .jumbotron > h1 > img {
+        max-width: none;
+        width: unset;
+    }
+}
